acm-root/namespaces/opssre/dev/opssre-gateway-dev-asm/external-asm-gateway-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: external-asm-gateway-dev
spec:
  selector:
    istio: ingressgateway-ext
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: external-gw-tls-credential
      verifyCertificateHash: 
      - "E1:11:A9:13:71:5C:81:8F:DE:A5:2F:F6:45:44:13:86"
    hosts:
    - feidcustexpaks001.ferguson.com
