acm-root/namespaces/opssre/dev/opssre-gateway-dev-asm/internal-asm-gateway-dev-m.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: internal-asm-gateway-dev-m
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8443
      name: httpsg
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: internal-gw-tls-credential-m
    hosts:
    - feidcustexpaks001.feiaz.ferguson.com
