acm-root/namespaces/opssre/dev/opssre-gateway-dev-asm/internal-asm-gateway-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: internal-asm-gateway-dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: internal-gw-tls-credential
    hosts:
    - feidcustexpaks001.feiaz.ferguson.com

  - port:
      number: 8443
      name: https-8443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: internal-gw-tls-credential
    hosts:
    - feidcustexpaks001.feiaz.ferguson.com
