acm-root/namespaces/opssre/dev/opssre-gateway-dev-asm/grafana-vs-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs-dev
  annotations:
    configmanagement.gke.io/cluster-selector: opssre-dev-clusters
spec:
  hosts:
  - "feidcustexpaks001.feiaz.ferguson.com"
  gateways:
  - opssre-gateway-dev/internal-asm-gateway-dev
  http:
  - match:
    - uri:
        prefix: "/grafana/"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 3000
        host: grafana.istio-system.svc.cluster.local
