acm-root/namespaces/opssre/dev/opssre-gateway-dev-asm/httpbin-ext-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-vs
spec:
  hosts:
  - "feidcustexpaks001.ferguson.com"
  gateways:
  - external-asm-gateway-dev
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: httpbin.sample.svc.cluster.local
