acm-root/namespaces/opssre/dev/opssre-gateway-dev-asm/kiali-vs-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs-dev
  annotations:
    configmanagement.gke.io/cluster-selector: opssre-dev-clusters
spec:
  hosts:
  - "feidcustexpaks001.feiaz.ferguson.com"
  gateways:
  - opssre-gateway-dev/internal-asm-gateway-dev
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        port:
          number: 20001
        host: kiali.istio-system.svc.cluster.local
